# ByteTalk

./: .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
ByteTalk/: CMakeLists.txt  Main.cpp
Capture/: CMakeLists.txt  README.md  VideoCapture.cpp  VideoCapture.hpp
Demo/: CMakeLists.txt  DemoTest.cpp  DemoTest.hpp
